--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
