--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "dayjs": "^1.11.12",
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.411.0",
+    "namor": "^3.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll-on-edges": "^1.0.3",
+    "react-table": "^7.8.0",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -38,9 +43,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "react-table-plugins": "^1.3.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
