--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-table-drag-select": "^0.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
