--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "react-table-plugins": "^1.3.4",
+    "supabase": "^1.187.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
