--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-4-app",
-  "type": "module",
+  "type": "commonjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
